--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,8 +30,8 @@
             />Galaxia</a>
         </a>
       </div>
-      <div>
-        <h3>Earth Time:</h3>
+      <div class="time-container">
+        <h3 id="time-title">Earth Time:</h3>
         <div id="clock">
         </div>
 
