--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -84,6 +84,48 @@
         {{/if}}
       </div>
     </nav>
+
+    <nav class="layout-nav-small">
+      <div>
+        <a href="/">
+          <a class="nav-title" href="/">
+            <img
+              class="moon-logo"
+              src="/images/moon2.webp"
+              alt="moon"
+            />Galaxia</a>
+        </a>
+      </div>
+
+      <div class="nav-links-container">
+        <div class="dropdown container-layout">
+          <span>Menu</span>
+          <div class="dropdown-content">
+            <a href="/">Home</a>
+            <a href="/library">Nasa Image Library</a>
+            <a href="/picture-of-the-day">Pictures of the Day</a>
+            <a href="/sun">Sun</a>
+            <a href="/moon">Moon</a>
+            <a href="/venus">Venus</a>
+            <a href="/curiosity">Curiosity</a>
+            {{#if isLoggedIn}}
+              <a href="/profile">Profile</a>
+              <a href="/private-library">Private Library</a>
+              <a href="/favorites">Favorites</a>
+              <a href="/private/create">Add new Image</a>
+              <a href="/logout">Logout</a>
+            {{else}}
+              <a href="/signup">Sign up</a>
+              <a href="/login">Login</a>
+            {{/if}}
+            {{#if isAdmin}}
+              <a class="profile-btn" href="/admin">Admin</a>
+            {{/if}}
+          </div>
+        </div>
+      </div>
+    </nav>
+
     {{{body}}}
     <footer>
       <div class="footer-container">
