--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -463,7 +463,7 @@ a,
   color: white;
   border-radius: 10px;
   font-size: 20px;
-  margin: 5px;
+  margin: -15px;
   display: flex;
   justify-content: center;
 }
@@ -472,13 +472,16 @@ a,
   font-family: Fragile Bombers;
   font-size: 22px;
   /* text-align: center; */
+  font-size: 24px;
+  align-items: center;
+  margin-top: 5px;
 }
 
 .time-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0;
+  margin: 5px;
 }
 
 @media only screen and (max-width: 850px) {
