--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,11 +1,11 @@
 <h1 class="title">Nasa Image Library</h1>
 <div class="search-container">
-  <form class="search-form" action="/library/search" method="post">
+  <form class="search-form" action="/library/search" method="get">
     <input
       class="input-style-search"
       type="text"
       placeholder="Search.."
-      name="keyword"
+      name="q"
     />
     <button class="default-btn" type="submit">Search</button>
   </form>
