--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -96,6 +96,7 @@
             />Galaxia</a>
         </a>
       </div>
+
       <div class="dropdown">
         <button
           class="btn btn-primary dropdown-toggle"
@@ -107,7 +108,9 @@
           Menu
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <li><a class="dropdown-item" href="/">Home</a></li>
+          <li>
+            <a class="dropdown-item" href="/">Home</a>
+          </li>
           <li>
             <a class="dropdown-item" href="#">
               Galleries &raquo;
@@ -128,9 +131,13 @@
               <li>
                 <a class="dropdown-item" href="/curiosity">Curiosity</a>
               </li>
-               {{#if isLoggedIn}}
-              <li><a class="dropdown-item" href="/profile">Profile</a></li>
-              <ul class="dropdown-menu dropdown-submenu">
+            </ul>
+          </li>
+          {{#if isLoggedIn}}
+            <li>
+              <a class="dropdown-item" href="/profile">Profile</a>
+            </li>
+            <ul class="dropdown-menu dropdown-submenu">
               <li>
                 <a class="dropdown-item" href="/private-library">Private Library</a>
               </li>
@@ -140,18 +147,23 @@
               <li>
                 <a class="dropdown-item" href="/private/create">Add new Image</a>
               </li>
-              {{else}}
-              <a class="dropdown-item" href="/signup">Sign up</a>
-              <a class="dropdown-item" href="/login">Login</a>
-            {{/if}}
-              <li><hr class="dropdown-divider" /></li>
-              <li>
-                <a class="dropdown-item" href="/logout">Logout</a>
-                {{#if isAdmin}}
-                  <a class="dropdown-item" href="/admin">Admin</a>
-                {{/if}}
-              </li>
             </ul>
+          {{else}}
+            <li>
+              <a class="dropdown-item" href="/signup">Sign up</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/login">Login</a>
+            </li>
+          {{/if}}
+          <li><hr class="dropdown-divider" /></li>
+          <li>
+            <a class="dropdown-item" href="/logout">Logout</a>
+          </li>
+          <li>
+            {{#if isAdmin}}
+              <a class="dropdown-item" href="/admin">Admin</a>
+            {{/if}}
           </li>
         </ul>
       </div>
