--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -490,10 +490,29 @@ a,
   margin: 5px;
 }
 
+.btn-secondary {
+  background-color: rgba(109, 100, 132);
+  border: none;
+}
+.dropdown-menu li {
+  position: relative;
+}
+.dropdown-menu .dropdown-submenu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
+.dropdown-menu .dropdown-submenu-left {
+  right: 100%;
+  left: auto;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+  display: block;
+}
+
 @media only screen and (max-width: 850px) {
   /* For mobile phones: */
-  body {
-  }
   h1 {
     font-size: 25pt;
   }
