changed font-size in css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -497,6 +497,9 @@ a,
 .dropdown-menu li {
   position: relative;
 }
+.dropdown-item {
+  font-size: 15pt;
+}
 .dropdown-menu .dropdown-submenu {
   display: none;
   position: absolute;
