--- a/views/search.hbs
+++ b/views/search.hbs
@@ -17,10 +17,9 @@
               alt="Picture of the day"
             /></a>
             {{#each data.0.keywords}}
-            <a class="keyword-link" href="/library/search?q={{this}}">#{{this}}</a> <br>
+            <a class="keyword-link" href="/library/search?q={{this}}">#{{this}}</a> 
           {{/each}}
           <h3>{{data.0.title}}</h3>
-          
         </div>
       {{/each}}
     </div>
