--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -1,6 +1,5 @@
-
 <div class="background-img">
-  <br><br><br><br>
+  <br /><br /><br /><br />
   <div class="background-container">
     <form class="input-container" action="/private/create" method="post">
       <div class="form-container">
@@ -21,7 +20,7 @@
       </div>
       <br />
       <div class="sub-btn">
-        <button class="default-btn">Create Image</button>
+        <button class="default-btn">Add Image</button>
       </div>
     </form>
   </div>
