--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -171,6 +171,12 @@ h3 {
   justify-content: center;
   padding: 5px;
 }
+.flex-container-admin {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 /* carousel */
 .carousel .slide {
