--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,9 +75,9 @@ h3 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.542), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 .img-carousel {
-  width: 100%;
-  height: 50%;
+  height: 600px;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 /* general style */
