added username on admin page

--- a/views/admin-settings.hbs
+++ b/views/admin-settings.hbs
@@ -5,6 +5,7 @@
     <br />
     <div class="flex-container-admin">
       {{#each allImages}}
+        <h3>The Image is from UserId: {{user}}</h3>
         <h3>{{name}}</h3>
         <img class="img-day" src="{{image}}" alt={{name}} />
         <div class="background-container">
