--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,5 +1,8 @@
 <div class="background-img">
-  <h1 class="profile-title"> Welcome to your profile {{user.username}}!</h1>
+  <h1 class="profile-title">
+    Welcome to your profile
+    <i>{{user.username}} </i>
+    !</h1>
 
   <div class="background-container">
     <h2 class="title"> Your Private Library</h2>
