--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -177,6 +177,11 @@ h3 {
   align-items: center;
   justify-content: center;
 }
+.admin-border {
+  border: 2px solid white;
+  margin: 10px;
+  padding: 0 50px;
+}
 
 /* carousel */
 .carousel .slide {
@@ -215,7 +220,6 @@ h3 {
   text-align: center;
   padding: 20px;
   font-size: 20px;
-  /* border: 1px solid grey; */
   width: 400px;
   background: #000000;
   border-radius: 20px;
