--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -47,9 +47,11 @@
         <div class="container-layout">
           <a href="/picture-of-the-day">Pictures of the Day</a>
         </div>
+
         <div class="dropdown container-layout">
           <span>Galleries</span>
           <div class="dropdown-content">
+            <a href="/earth-quiz">Quiz</a>
             <a href="/sun">Sun</a>
             <a href="/moon">Moon</a>
             <a href="/venus">Venus</a>
@@ -117,6 +119,11 @@
             <ul class="dropdown-menu dropdown-submenu">
               <li>
                 <a class="dropdown-item" href="/library">Nasa Image Library</a>
+              </li>
+              <li>
+                <li>
+                  <a class="dropdown-item" href="/earth-quiz">Quiz</a>
+                </li>
               </li>
               <li>
                 <a class="dropdown-item" href="/sun">Sun</a>
