--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -52,6 +52,7 @@
           <span>Galleries</span>
           <div class="dropdown-content">
             <a href="/earth-quiz">Quiz</a>
+            <a href="/galex">Galex</a>
             <a href="/sun">Sun</a>
             <a href="/moon">Moon</a>
             <a href="/venus">Venus</a>
@@ -124,6 +125,9 @@
                 <li>
                   <a class="dropdown-item" href="/earth-quiz">Quiz</a>
                 </li>
+              </li>
+              <li>
+                <a class="dropdown-item" href="/galex">Galex</a>
               </li>
               <li>
                 <a class="dropdown-item" href="/sun">Sun</a>
