--- a/views/galleries/quiz.hbs
+++ b/views/galleries/quiz.hbs
@@ -12,7 +12,7 @@
               onclick="saveFavorite(this, '{{data.0.nasa_id}}')"
             ></i>
           {{/if}}
-          <h3>Where on Earth is?</h3>
+          <h3>Where on Earth is this?</h3>
           <img
               class="img-gallery"
               src="{{links.0.href}}"
