--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -151,6 +151,9 @@
 
               <ul class="dropdown-menu dropdown-submenu">
                 <li>
+                  <a class="dropdown-item" href="/profile">Profile</a>
+                </li>
+                <li>
                   <a class="dropdown-item" href="/private-library">Private
                     Library</a>
                 </li>
