--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,3 @@
-
 <div class="background-container">
   <div class="flex-container-column">
     <div class="flex-container-row">
@@ -36,7 +35,7 @@
     </div>
     <br />
     <button type="button" class="btn btn-outline-secondary">
-      <a href="/Library">Go to Library</a>
+      <a href="/library">Go to Library</a>
     </button>
   </div>
 </div>
