--- a/views/galleries/quiz.hbs
+++ b/views/galleries/quiz.hbs
@@ -13,7 +13,7 @@
           </div>
           <div class="margin">
             <button type="button" class="btn btn-outline-secondary">
-              <a ref="/library/{{data.0.nasa_id}}">Click to see answer!</a>
+              <a href="/library/{{data.0.nasa_id}}">Click to see answer!</a>
             </button>
           </div>
         </div>
