fixed admin delete route

--- a/views/admin-settings.hbs
+++ b/views/admin-settings.hbs
@@ -13,7 +13,7 @@
             <h2>Description:</h2>
             <h3>{{description}}</h3>
           </div>
-          <form action="/private-library/delete/{{_id}}" method="post">
+          <form action="/admin/delete/{{_id}}" method="post">
             <button class="delete-btn-admin" type="submit">Delete Image</button>
           </form>
         </div>
