added galleries to slider

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -51,7 +51,7 @@
         <div class="dropdown container-layout">
           <span>Galleries</span>
           <div class="dropdown-content">
-            <a href="/earth-quiz">Quiz</a>
+            <a href="/earth-quiz">Image Quiz</a>
             <a href="/galex">Galex</a>
             <a href="/sun">Sun</a>
             <a href="/moon">Moon</a>
