--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,9 +70,54 @@
         data-bs-slide-to="3"
         aria-label="Slide 4"
       ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="4"
+        aria-label="Slide 5"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide-to="5"
+        aria-label="Slide 6"
+      ></button>
     </div>
 
     <div class="carousel-inner">
+      <div class="carousel-item">
+        {{#each quizPhotoData}}
+          <a href="/library/{{data.0.nasa_id}}">
+            <img
+              class="img-carousel"
+              src="{{links.0.href}}"
+              class="d-block w-100"
+              alt="..."
+            /></a>
+        {{/each}}
+        <div class="carousel-caption d-none d-md-block">
+          <button type="button" class="btn btn-outline-secondary">
+            <a href="/quiz">Go to The Image Quiz Gallery </a>
+          </button>
+        </div>
+      </div>
+      <div class="carousel-item">
+        {{#each galexPhotoData}}
+          <a href="/library/{{data.0.nasa_id}}">
+            <img
+              class="img-carousel"
+              src="{{links.0.href}}"
+              class="d-block w-100"
+              alt="..."
+            /></a>
+        {{/each}}
+        <div class="carousel-caption d-none d-md-block">
+          <button type="button" class="btn btn-outline-secondary">
+            <a href="/galex">Go to The Galex Gallery </a>
+          </button>
+        </div>
+      </div>
+
       <div class="carousel-item">
         {{#each sunPhotoData}}
           <a href="/library/{{data.0.nasa_id}}">
